gcc/testsuite/gdc.test/runnable/imports/imp22624.c

struct B
{
    unsigned int x : 1;
//    unsigned int x;
};
