gcc/testsuite/gdc.test/fail_compilation/imports/imp22749.c
struct S22749
{
    int field : 1;
};
